Fixed: Dropshadows on mobile and tablet not appearing

--- a/site-sass/components/sticky.scss
+++ b/site-sass/components/sticky.scss
@@ -28,7 +28,7 @@
   transition: all 0.15s linear;
 }
 
-#masthead.active {
+#masthead.activeMobile, #masthead.active {
   box-shadow: 0px 0px 7px #c8c7c7;
 }
 
